<resources>
    <string name="app_name">Church</string>
    <string name="title_activity_dash_board">DashBoard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>

    <string name="facebook_app_id">1960320220849137</string>
    <string name="fb_login_protocol_scheme">fb1960320220849137</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_fb">Sign in with Faceboook</string>
    <string name="skip_sign_in">Skip SignIn</string>
    <string name="contact_us">Contact Us</string>
    <string name="our_address">Our Address:</string>
    <string name="church_name">CSI Christ Church </string>
    <string name="road_name">ASR Stadium Road, </string>
    <string name="dist_name">Eluru, W.G Dist., </string>
    <string name="state_name">Andhra Pradesh 534005</string>
    <string name="mobile">Mobile No: </string>
    <string name="num">08812 250777</string>
    <string name="office">Office:</string>
    <string name="wtsapp">Whats App:</string>
    <string name="email_incharge">Email to Presbyter-In-Charge</string>
    <string name="email_secretary">Email to Secretary</string>
    <string name="email_admin">Email to Admin</string>

    <string name="dashboard">DashBoard</string>
    <string name="worship_timings">Worship Timings</string>
    <string name="bible">Bible</string>
    <string name="gallery">Gallery</string>
    <string name="timings">Every Sunday (H.C) – 8.30 AM – 11.00 AM \n(Except Fourth Sunday) \n\n\n
    Every Fourth Sunday – 8.30 AM – 10.30 AM \n\n\n
    English Service – 6.30 PM – 8.00 PM \n\n\n
    Sunday school – 8.30 AM – 10.00 AM \n\n\n
    Youth Service – 4.00 PM – 6.00 PM \n\n\n
    Women Fellowship – 6.30 PM – 8.00 PM \n\n\n
    Every Friday (H.C)  -  6.00 AM – 7.00 AM </string>


    <string-array name="Book">
        <item>ఆది కాండము</item>
        <item>నిర్గామకాండము</item>
        <item>లేవియ కాండము</item>
        <item>సంఖ్యా కాండము</item>
        <item>ద్వితీయోపదేశ కాండము</item>
        <item>యెహూషువ</item>
        <item>న్యాయాధిపతులు</item>
        <item>రూతు</item>
        <item>1 సమూయేలు</item>
        <item>2 సమూయేలు</item>
        <item>1 రాజులు</item>
        <item>2 రాజులు</item>
        <item>1 దినవృత్తాంతాలు</item>
        <item>2 దినవృత్తాంతాలు</item>
        <item>ఎజ్రా</item>
        <item>నెహెమ్యా</item>
        <item>ఎస్తేరు</item>
        <item>యోబు గ్రంథము</item>
        <item>కీర్తనల గ్రంథము</item>
        <item>సామెతలు</item>
        <item>ప్రసంగిు</item>
        <item>పరమగీతము</item>
        <item>యోషయా</item>
        <item>యిర్మియా</item>
        <item>విలాపవాక్యములు</item>
        <item>యెజెజ్కేలు</item>
        <item>దానియేలు</item>
        <item>హోషేయ</item>
        <item>యోవేలు</item>
        <item>ఆమోసు</item>
        <item>ఓబద్యా</item>
        <item>యోనా</item>
        <item>మీకా</item>
        <item>నహూము</item>
        <item>హబక్కూకు</item>
        <item>జెఫన్యా</item>
        <item>హగ్గయి</item>
        <item>జెకర్యా</item>
        <item>మలాకీ</item>
        <item>మత్తయి సువార్త</item>
        <item>మార్కు సువార్త</item>
        <item>లూకా సువార్త</item>
        <item>యోహాను సువార్త</item>
        <item>అపోస్తలుల కార్యములు</item>
        <item>రోమీయులకు పత్రిక</item>
        <item>I కొరంథీయులకు పత్రిక</item>
        <item>కొరంథీయులకు పత్రిక</item>
        <item>గలతీయులకు పత్రిక</item>
        <item>ఎఫసీయులకు పత్రిక</item>
        <item>ఫిలిప్పీయులకు పత్రిక</item>
        <item>కొలొస్సైయులకు పత్రిక</item>
        <item>1 థెస్సలొనీకైయులకు పత్రిక</item>
        <item>2 థెస్సలొనీకైయులకు పత్రిక</item>
        <item>I తెమోతికి పత్రిక</item>
        <item>II తెమోతికి పత్రిక</item>
        <item>తీతుకు పత్రిక</item>
        <item>ఫిలేమోనుకు పత్రిక</item>
        <item>హెబ్రీయులకు పత్రిక</item>
        <item>యాకోబు పత్రిక</item>
        <item>I పేతురు పత్రిక,</item>
        <item>II పేతురు పత్రిక</item>
        <item>I యోహాను పత్రిక</item>
        <item>II యోహాను పత్రిక</item>
        <item>III యోహాను పత్రిక</item>
        <item>యూదా పత్రిక</item>






    </string-array>
    <string-array name="VERSIONS">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
    </string-array>



    <string-array name="chapters">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
    </string-array>
</resources>
