<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:text="@string/our_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview_header"
        android:textSize="@dimen/fab_margin"/>

    <TextView
        android:text="@string/church_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Subhead"/>

    <TextView
        android:text="@string/road_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Subhead"/>

    <TextView
        android:text="@string/dist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Subhead"/>

    <TextView
        android:text="@string/state_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Subhead"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/insidepost_coding"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:text="@string/office"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/textview_header"
            android:layout_weight=".3"/>
        <TextView
            android:text="@string/num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            style="@style/TextAppearance.AppCompat.Subhead"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:text="@string/wtsapp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/textview_header"
            android:layout_weight=".3"/>
        <TextView
            android:text="@string/num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            style="@style/TextAppearance.AppCompat.Subhead"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:text="@string/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/textview_header"
            android:layout_weight=".3"/>
        <TextView
            android:text="church@gmail.com"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            style="@style/TextAppearance.AppCompat.Subhead"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:text="@string/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/textview_header"
            android:layout_weight=".3"/>
        <TextView
            android:text="church1@gmail.com"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_weight=".7"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:text="@string/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/textview_header"
            android:layout_weight=".3"/>
        <TextView
            android:text="church2@gmail.com"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            style="@style/TextAppearance.AppCompat.Subhead"/>
    </LinearLayout>

</LinearLayout>

<!--our address-->
<!--CSI Christ Church-->
<!--ASR Stadium Road-->
<!--Eluru, W.G Dist.-->
<!--Andhra Pradesh, 534005.-->