<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rameshmklll.church.MainActivity"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:src="@drawable/signin_" />

    <Button
        android:id="@+id/btGoogle"
        android:gravity="center"
        android:text="@string/sign_in_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyButton"
        android:drawableStart="@drawable/googleg_standard_color_18" />

    <Button
        android:id="@+id/btFb"
        android:text="@string/sign_in_fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:theme="@style/MyButtonFb"
        android:drawableStart="@drawable/com_facebook_button_icon_blue"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvSkip"
        android:gravity="end"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip_sign_in"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textColor="@color/textcolor_light_grey"/>
</LinearLayout>
